[gd_scene load_steps=11 format=3 uid="uid://cfhql05dj6udh"]

[ext_resource type="Script" uid="uid://bbvi58u8grx2e" path="res://main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://yba5kdfjgn65" path="res://cube_6.png" id="2"]

[sub_resource type="Environment" id="1"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0.648438, 0.64578, 0.64578, 1)

[sub_resource type="CylinderMesh" id="2"]
top_radius = 0.2
bottom_radius = 0.1
height = 4.0
radial_segments = 16

[sub_resource type="StandardMaterial3D" id="3"]
diffuse_mode = 1
albedo_color = Color(0.356557, 1, 0.366611, 1)
roughness = 0.0

[sub_resource type="CylinderMesh" id="4"]
top_radius = 0.1
radial_segments = 16

[sub_resource type="StandardMaterial3D" id="5"]
diffuse_mode = 1
albedo_color = Color(0.0266393, 0.292793, 1, 1)
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="6"]
diffuse_mode = 1
albedo_color = Color(0.957031, 0.801627, 0.0921731, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="7"]
size = Vector3(4, 4, 4)

[sub_resource type="StandardMaterial3D" id="8"]
diffuse_mode = 1
albedo_texture = ExtResource("2")
roughness = 0.0

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 1049.0
offset_bottom = 626.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 4

[node name="LabelEmpty" type="Label" parent="Control/GridContainer"]
layout_mode = 2

[node name="LabelX" type="Label" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
text = "X"
horizontal_alignment = 1

[node name="LabelY" type="Label" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
text = "Y"
horizontal_alignment = 1

[node name="LabelZ" type="Label" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
text = "Z"
horizontal_alignment = 1

[node name="Accelerometer" type="Label" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
text = "Accelerometer"

[node name="AccX" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 2.08165e-12)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="AccY" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 2.08165e-12)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="AccZ" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 2.08165e-12)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Gravity" type="Label" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
text = "Gravity"

[node name="GravX" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="GravY" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="GravZ" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Magnetometer" type="Label" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
text = "Magnetometer"

[node name="MagX" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="MagY" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="MagZ" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Gyroscope" type="Label" parent="Control/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
text = "Gyroscope"

[node name="GyroX" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="GyroY" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="GyroZ" type="Label" parent="Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.285209, 0, 11.9833)
fov = 74.0
near = 0.1

[node name="Arrows" type="Node3D" parent="."]

[node name="AccelerometerArrow" type="Node3D" parent="Arrows"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)

[node name="Bottom" type="MeshInstance3D" parent="Arrows/AccelerometerArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("2")
surface_material_override/0 = SubResource("3")

[node name="Top" type="MeshInstance3D" parent="Arrows/AccelerometerArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
mesh = SubResource("4")
surface_material_override/0 = SubResource("3")

[node name="MagnetoArrow" type="Node3D" parent="Arrows"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="Bottom" type="MeshInstance3D" parent="Arrows/MagnetoArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("2")
surface_material_override/0 = SubResource("5")

[node name="Top" type="MeshInstance3D" parent="Arrows/MagnetoArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
mesh = SubResource("4")
surface_material_override/0 = SubResource("5")

[node name="NorthArrow" type="Node3D" parent="Arrows"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="Bottom" type="MeshInstance3D" parent="Arrows/NorthArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("2")
surface_material_override/0 = SubResource("6")

[node name="Top" type="MeshInstance3D" parent="Arrows/NorthArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
mesh = SubResource("4")
surface_material_override/0 = SubResource("6")

[node name="Boxes" type="Node3D" parent="."]

[node name="MagAndGrav" type="MeshInstance3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, -4, 0)
mesh = SubResource("7")
surface_material_override/0 = SubResource("8")

[node name="GyroAndGrav" type="MeshInstance3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, -4, 0)
mesh = SubResource("7")
surface_material_override/0 = SubResource("8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.884838, -0.329433, 0.329449, 0, 0.707124, 0.707089, -0.4659, -0.625659, 0.62569, 0, 4.69444, 0)
